--- a/index.html
+++ b/index.html
@@ -254,17 +254,18 @@
     10: '+6289523803621'
   };
   const teksTambahan = {
-    1: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=sk3mfbltc&r=cAYM8h&orderId=20250413101214842715010300166998217515007',
-    2: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s7tqsxq2u&r=cAYM8h&orderId=20250413101214247015010300166998217570088',
-    3: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=sj34vdb9l&r=cAYM8h&orderId=20250413101214288515010300166998217670130',
-    4: 'Ada kejutan DANA Kaget buat kamu! Buruan klaim sebelum habis! 🎁🎁🎁 https://link.dana.id/danakaget?c=abcd123efg&r=xyz789',
-    5: 'Jangan sampai ketinggalan DANA Kaget spesial! Klik sekarang! ✨✨✨ https://link.dana.id/danakaget?c=hijklm456&r=uvw012',
-    6: 'Rezeki nomplok DANA Kaget menantimu! Ambil sekarang! 🎉🎉🎉 https://link.dana.id/danakaget?c=nopqrs789&r=tuv345',
-    7: 'DANA Kaget hadir lagi! Jangan lewatkan kesempatan ini! 💰💰💰 https://link.dana.id/danakaget?c=tuvwxyz012&r=rst678',
-    8: 'Spesial buat kamu, DANA Kaget gratis! Sikat habis! 🔥🔥🔥 https://link.dana.id/danakaget?c=1234abcd56&r=pqr901',
-    9: 'Klaim DANA Kagetmu sekarang juga! Jangan sampai menyesal! 🚀🚀🚀 https://link.dana.id/danakaget?c=efgh789ijk&r=lmn234',
-    10: 'Ada DANA Kaget spesial akhir pekan! Buruan serbu! 💥💥💥 https://link.dana.id/danakaget?c=lmnopqrs90&r=def567'
+    1: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 🥳🥳🥳🥳🥳 https://link.dana.id/danakaget?c=s4bqtsfcb&r=cAYM8h&orderId=20250414101214057515010300166998217676880',
+    2: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 😍😍😍😍 https://link.dana.id/danakaget?c=sq6l8kh62&r=cAYM8h&orderId=20250414101214834315010300166998217627924',
+    3: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💰💰💰💰 https://link.dana.id/danakaget?c=skf4x6ru6&r=cAYM8h&orderId=20250414101214880715010300166998217732177',
+    4: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s47gqwgqg&r=cAYM8h&orderId=20250414101214824015010300166998217697228',
+    5: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang ℹ️ℹ️ℹ️ℹ️ https://link.dana.id/danakaget?c=scu2fkk2v&r=cAYM8h&orderId=20250414101214238815010300166998217640969',
+    6: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 🙃🙃🙃 https://link.dana.id/danakaget?c=sz3qeeztn&r=cAYM8h&orderId=20250414101214820915010300166998217655372',
+    7: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 🔰🔰🔰🔰 https://link.dana.id/danakaget?c=sb946pk8q&r=cAYM8h&orderId=20250414101214288715010300166998217611433',
+    8: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 🎋🎋🎋 https://link.dana.id/danakaget?c=sxr58rjud&r=cAYM8h&orderId=20250414101214788515010300166998217659441',
+    9: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 😁😁😁 https://link.dana.id/danakaget?c=s6enwydgd&r=cAYM8h&orderId=20250414101214052315010300166998217656804',
+    10: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 😫😫😫 https://link.dana.id/danakaget?c=sfncw7qwc&r=cAYM8h&orderId=20250414101214808315010300166998217665544'
   };
+
   const jawabanBenar = {
     1: 'Local Area Network',
     2: '11',
