--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ function autoScroll() {
 const swals = Swal.mixin({allowOutsideClick: false, cancelButtonColor: '#FF0040', imageWidth: 90, imageHeight: 90,});
 const swalst = Swal.mixin({timer: 2400, allowOutsideClick: false, showConfirmButton: false, timerProgressBar: true, imageWidth: 90, imageHeight: 90,});
 const scrollInterval = setInterval(autoScroll, 50);
-async function jawab(){await swals.fire('Kirim jawabannya<br>ke WhatsApp aku, ya! 😆'); window.location.href = "https://api.whatsapp.com/send?phone=6285711374861&text=" + pesanwhatsapp + "%0A%0A" + "Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=swwup3eau&r=cAYM8h&orderId=20250414101214488915010300166998217724662";}
+async function jawab(){await swals.fire('Kirim jawabannya<br>ke WhatsApp aku, ya! 😆'); window.location.href = "https://api.whatsapp.com/send?phone=6285711374861&text=" + pesanwhatsapp + "%0A" + "DAGETNYA KETIK : ( nara ganteng )";}
 function tombol(){Tombol.style="margin-top:0;opacity:1;transform: scale(1);";ftom=1;} ftom = 0; jumlahKlik = 0;
 function fungsibaru(btn) {
     var tombol = document.getElementById("" + btn);
