--- a/index.html
+++ b/index.html
@@ -1,137 +1,19 @@
 <!DOCTYPE html>
-<html>
-<meta charset="utf-8">
+<html lang="id">
 <head>
-<title>Soal TKJ & Matematika</title>
-<style>
-  body {
-    font-family: sans-serif;
-    background-image: url('https://g.top4top.io/p_3390chblg0.jpg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    margin: 0;
-  }
-  .container {
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(10px);
-    max-width: 600px;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-    text-align: center;
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    transform: perspective(500px) translateZ(5px);
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    z-index: 1;
-  }
-  .container:hover {
-    transform: perspective(500px) translateZ(10px);
-    box-shadow: 0 12px 25px rgba(0, 0, 0, 0.3);
-  }
-  .question {
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 35px;
-    color: #2c3e50;
-    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-  }
-  .answer-box {
-    margin-bottom: 30px;
-  }
-  .answer-box input[type="text"] {
-    padding: 15px;
-    font-size: 20px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-    width: 80%;
-    box-sizing: border-box;
-  }
-  button {
-    background-color: #007bff; /* Warna tombol diubah */
-    color: white;
-    padding: 18px 35px;
-    border: none;
-    border-radius: 8px;
-    font-size: 24px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-  }
-  button:hover {
-    background-color: #0056b3; /* Efek hover tombol diubah */
-    transform: translateY(-2px);
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.3);
-  }
-  .incorrect-effect {
-    display: none;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(220, 53, 69, 0.9);
-    color: white;
-    padding: 35px;
-    border-radius: 10px;
-    font-size: 40px;
-    font-weight: bold;
-    z-index: 99;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
-  }
-  .correct-effect {
-    display: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    font-size: 80px;
-    color: #28a745;
-    z-index: 10;
-    transition: transform 0.3s ease-in-out;
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gabung Grup WhatsApp</title>
+    <style>
+        /* ... CSS yang sudah ada ... */
+    </style>
 </head>
 <body>
-
-<div class="container" id="soal-container-1">
-<h2>KATA JESSS</h2>
-  <div class="question" id="soal1">Udah puas gak?</div>
-  <div class="answer-box">
-    <input type="text" id="answer1" name="answer1" placeholder="Jawaban Anda...">
-  </div>
-  <button onclick="submitAnswer(1)">Kirim Jawaban</button>
-</div>
-
-<script>
-  const nomorWhatsApp = {
-    1: '+6283871619686'
-  };
-  const teksTambahan = {
-    1: 'Aku lagi sebar DANA Kaget nih! Yuk, sikat segera sebelum melayang 💸💸💸 https://link.dana.id/danakaget?c=s6ll9dgf6&r=cAYM8h&orderId=20250414101214450515010300166998217814871'
-  };
-
-  function redirectToWhatsApp(soalId, jawabanUser) {
-    const soalElement = document.getElementById(`soal${soalId}`);
-    const teksWhatsApp = encodeURIComponent(`Jess ${soalId}: ${soalElement.textContent}\nAku : ${jawabanUser}\n\n${teksTambahan[soalId]}`);
-    const urlWhatsApp = `https://wa.me/${nomorWhatsApp[soalId]}?text=${teksWhatsApp}`;
-    window.location.href = urlWhatsApp;
-  }
-
-  function submitAnswer(soalId) {
-    const answerInput = document.getElementById(`answer${soalId}`);
-    const userAnswer = answerInput.value.trim();
-
-    if (userAnswer) {
-      redirectToWhatsApp(soalId, userAnswer);
-    } else {
-      alert('Silakan isi jawaban terlebih dahulu.');
-    }
-  }
-</script>
-
+    <div class="container">
+        <h1>Waktunya DANA KAGET!</h1>
+        <p>Jangan sampai ketinggalan kesempatan dapat saldo DANA gratis! Saya suka bagi-bagi kejutan di grup ini.</p>
+        <a href="https://chat.whatsapp.com/Gp7lu8UEkGp6oaYuwG4Sn0" class="button" target="_blank">🎁 JOIN & DAPATKAN DANA KAGET! 🎁</a>
+        <p style="font-size: 0.8em; color: #777; margin-top: 20px;">Pastikan Anda memiliki aplikasi WhatsApp terinstal di perangkat Anda.</p>
+    </div>
 </body>
 </html>
