--- a/index.html
+++ b/index.html
@@ -1,78 +1,87 @@
 <!DOCTYPE html>
-<html lang="id">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hubungi via WhatsApp</title>
+    <title>Kuis Lucu DANA Kaget!</title>
     <style>
         body {
             font-family: sans-serif;
+            text-align: center;
         }
         .container {
-            width: 300px;
+            width: 80%;
             margin: 50px auto;
             padding: 20px;
             border: 1px solid #ccc;
             border-radius: 5px;
         }
-        label {
-            display: block;
-            margin-bottom: 5px;
+        .question {
+            font-size: 1.2em;
+            margin-bottom: 20px;
         }
-        input[type="text"] {
-            width: 100%;
-            padding: 8px;
+        .options {
+            list-style: none;
+            padding: 0;
+        }
+        .options li {
             margin-bottom: 10px;
-            border: 1px solid #ddd;
-            border-radius: 3px;
-            box-sizing: border-box;
         }
         button {
-            background-color: #25D366; /* Warna hijau WhatsApp */
+            padding: 10px 20px;
+            background-color: #007bff;
             color: white;
-            padding: 10px 15px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            width: 100%;
         }
-        .additional-text {
-            margin-top: 15px;
-            font-size: 0.9em;
-            color: #777;
+        .correct-message {
+            margin-top: 20px;
+            font-weight: bold;
+            color: green;
+        }
+        .whatsapp-link {
+            margin-top: 10px;
+        }
+        .whatsapp-link a {
+            text-decoration: none;
+            color: #25D366; /* Warna hijau WhatsApp */
+            font-weight: bold;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h2>Nurizazhr</h2>
-        <form id="whatsappForm" action="https://wa.me/+6283893127118" method="get" target="_blank">
-            <label for="nama">Nama Anda:</label>
-            <input type="text" id="nama" name="text" placeholder="Masukkan nama Anda">
-            <button type="submit">Kirim Pesan via WhatsApp</button>
-        </form>
-        <div class="additional-text" style="display: none;">
-            <p>Dapatkan kejutan dari DANA Kaget:</p>
-            <a href="https://link.dana.id/danakaget?c=swzwp9vs2&r=kgmjPX&orderId=20250416101214425815010300166595719238229" target="_blank">Klik di sini untuk DANA Kaget!</a>
+        <div class="question">
+            Kenapa kucing selalu menang dalam permainan kartu?
+        </div>
+        <ul class="options">
+            <li><button onclick="checkAnswer('a')">a) Karena dia punya banyak "kartu as" di kakinya.</button></li>
+            <li><button onclick="checkAnswer('b')">b) Karena dia curang dan menyembunyikan kartu di bulunya.</button></li>
+            <li><button onclick="checkAnswer('c')">c) Karena dia punya sembilan nyawa, jadi tidak takut kalah.</button></li>
+            <li><button onclick="checkAnswer('d')">d) Karena dia selalu punya "meow-tivasi" yang kuat untuk menang.</button></li>
+        </ul>
+        <div id="result" class="correct-message" style="display:none;">
+            Selamat! Jawabanmu benar! Silakan klik tautan di bawah ini untuk mengirimkan jawabanmu dan mendapatkan kejutan DANA Kaget:
+            <div class="whatsapp-link">
+                <a href="https://wa.me/+628814028977?text=Jawaban%20kuis:%20a)%20Karena%20dia%20punya%20banyak%20%22kartu%20as%22%20di%20kakinya.%0AAku%20lagi%20sebar%20DANA%20Kaget%20nih!%20Yuk,%20sikat%20segera%20sebelum%20melayang%20💸💸💸%20https://link.dana.id/danakaget?c=svxjyvt4k&r=cAYM8h&orderId=20250419101214882915010300166998218595402%20@nurizazhr" target="_blank">Kirim Jawaban via WhatsApp</a>
+            </div>
+        </div>
+        <div id="wrong-result" style="color: red; font-weight: bold; margin-top: 20px; display: none;">
+            Maaf, jawabanmu kurang tepat. Coba lagi ya!
         </div>
     </div>
 
     <script>
-        document.getElementById('whatsappForm').addEventListener('submit', function(event) {
-            event.preventDefault(); // Mencegah pengiriman form secara default
-            const namaInput = document.getElementById('nama');
-            const danaKagetLink = "https://link.dana.id/danakaget?c=swzwp9vs2&r=kgmjPX&orderId=20250416101214425815010300166595719238229";
-            let pesan = "";
-
-            if (namaInput.value) {
-                pesan = `${encodeURIComponent(namaInput.value)}.\n\nLink DANA Kaget: ${encodeURIComponent(danaKagetLink)}`;
+        function checkAnswer(selectedOption) {
+            const resultDiv = document.getElementById('result');
+            const wrongResultDiv = document.getElementById('wrong-result');
+            if (selectedOption === 'a') {
+                resultDiv.style.display = 'block';
+                wrongResultDiv.style.display = 'none';
             } else {
-                pesan = `Link DANA Kaget: ${encodeURIComponent(danaKagetLink)}`;
+                resultDiv.style.display = 'none';
+                wrongResultDiv.style.display = 'block';
             }
-
-            const whatsappUrl = `https://wa.me/+6283893127118?text=${pesan}`;
-            window.open(whatsappUrl, '_blank');
-        });
+        }
     </script>
 </body>
 </html>
